# goit-ds-hw-02

./: README.md  manage_alt.py  pyproject.toml  seed.py  tm_alt.db
sql/: create_tables_alt.sql  queries_alt.sql
